[package]
name = "custodes"
version = "0.0.0"
edition = "2021"
description = "ferros storage engine: mirrored 4KB block devices, generation ring, plow-managed tract, COW HAMT. Every block guards itself; the guards verify each other."
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
