[package]
name = "manifestus"
version = "0.0.0"
edition = "2021"
description = "ferros storage engine: mirrored 4KB block devices, generation ring, plow-managed tract, COW HAMT. Every block guards itself; the guards verify each other."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickspiker/manifestus"
readme = "README.md"

[dependencies]
blake3 = "1"
# EWE + typed fields for spine entries / furrows / HAMT nodes. No text features — the engine uses d/u/h/e types only, never x.
vsf = { version = "0.8", default-features = false, features = ["std"] }

# Structural vault inspector (vsfinfo-style). Host-only — it backs the device with FileDev.
[[bin]]
name = "vaultinfo"
path = "src/bin/vaultinfo.rs"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
